Header.css추가 html 헤더 추가

--- a/index.html
+++ b/index.html
@@ -52,20 +52,82 @@
     </div>
     <!-- 헤더부분 -->
       <header class="header-section">
-        <nav id="nav_bar">
-          <a href="#">
-            <img class="header_nav_bar_logo_img" src="https://img.79plus.co.kr/megahp/common/img/new_logo_b.png " alt="">
-          </a>
-          <ul class="nav_list">
-            <li><a class="nav_move" href="a">menu</a></li>
-            <li><a class="nav_move" href="a">menu</a></li>
-            <li><a class="nav_move" href="a">menu</a></li>
-            <li><a class="nav_move" href="a">menu</a></li>
-            <li><a class="nav_move" href="a">menu</a></li>
-          </ul>
-        </nav>
-        <p>오른쪽 블로그 인스타 페북 링크 </p>
-      </header>
+    <div class="header-inner">
+      <div class="header-logo">
+        <a href="#">
+            <img src="https://img.79plus.co.kr/megahp/common/img/new_logo_b.png" alt="Mega Coffee Logo">
+        </a>
+      </div>
+      <nav class="header-nav">
+        <ul class="header-nav-list">
+          <li class="header-nav-item">
+            <a href="#">메가 스토리</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">브랜드</a></li>
+              <li class="header-submenu-item"><a href="#">BI</a></li>
+              <li class="header-submenu-item"><a href="#">오시는 길</a></li>
+            </ul>
+          </li>
+          <li class="header-nav-item">
+            <a href="#">메뉴소개</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">음료</a></li>
+              <li class="header-submenu-item"><a href="#">푸드</a></li>
+              <li class="header-submenu-item"><a href="#">상품</a></li>
+            </ul>
+          </li>
+          <li class="header-nav-item">
+            <a href="#">매장</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+            </ul>
+          </li>
+          <li class="header-nav-item">
+            <a href="#">매장</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+            </ul>
+          </li>
+          <li class="header-nav-item">
+            <a href="#">매가소식</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+            </ul>
+          </li>
+          <li class="header-nav-item">
+            <a href="#">채용</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">채용안내</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+      <div class="header-nav-move-bar-link">
+        <div class="header-nav-move-bar-link-click">
+          <a href="#"><img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_smartstore.png" alt=""></a>
+
+        </div>
+        <div class="header-nav-move-bar-link-click">
+          <a href="#"><img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_instagram.png" alt=""></a>
+
+        </div>
+        <div class="header-nav-move-bar-link-click">
+          <a href="#"><img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_facebook.png" alt=""></a>
+
+        </div>
+        <div class="header-nav-move-bar-link-click">
+          <a href="#"><img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_blog.png" alt=""></a>
+
+        </div>
+      </div>
+    </div>
+  </header>
     <!-- 메인부분 -->
     <main>
        <!-- 나다희 -->
