--- a/menu.html
+++ b/menu.html
@@ -90,61 +90,9 @@
                     </ul>
                 </div>
                 <div class="gallery-list">
-                    <ul class="menu-list">
-                        <!--li 데이터 배열 생성 공간-->
-                        <!-- <li>
-                            <a href="#">
-                                <div class="menu-list-box">
-                                    <div class="menu-list-img">
-                                        <div class="menu-label label1">ICE</div>
-                                        <img src="https://img.79plus.co.kr/megahp/manager/upload/menu/20250320004326_1742399006488_yI4cvwXy6N.jpg" alt="">
-                                    </div>
-                                    <div class="menu-info-box">
-                                        <div class="menu-text-title w400">디카페인 왕메가카페라떼</div>
-                                        <p class="text3">Decaf BIG MEGA Caffe Latte</p>
-                                        <div class="text3 text-info">
-                                            진한 에스프레소와 부드러운 우유가 어우러져 고소한 풍미를 완성한 메가MGC커피만의 왕메가사이즈 라떼
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                            <div class="menu-modal">
-                                <div class="menu-modal-top">
-                                    <div class="inner-modal">
-                                        <div class="close-btn"></div>
-                                        <p class="w400 text4">디카페인 왕메가카페라떼</p>
-                                        <p class="text5">DeCaf BIG MEGA Caffe Latte</p>
-                                    </div>
-                                    <div>
-                                        <p>946ml</p>
-                                        <p>1회 제공량 278.7kcal</p>
-                                        <br>
-                                        <p class="m20">진한 에스프레소와 부드러운 우유가 어우러져 고소한 풍미를 완성한 메가MGC커피만의 왕메가사이즈 라떼</p>
-                                        <p class="text5">알레르기 성분: 우유</p>
-                                    </div>
-                                </div>
-                                <div class="menu-modal-bottom">
-                                    <ul>
-                                        <li>포화지방 7.2g</li>
-                                        <li>당류 26.4g</li>
-                                        <li>나트륨 136.4mg</li>
-                                        <li>단백질 10.6g</li>
-                                        <li>카페인 11.2mg</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </li> -->
-                    </ul>
+                    <ul class="menu-list"><!--li 데이터 배열 생성 공간--></ul>
                     <div class="page-wrap">
-                        <ul class="page-list">
-                            <!-- li 페이지네이션 생성 공간-->
-                             <li>
-                                <a href="#">처음</a>
-                             </li>
-                             <li>
-                                <a href="#" class="page-check">1</a>
-                             </li>
-                        </ul>
+                        <ul class="page-list"><!-- li 페이지네이션 생성 공간--></ul>
                     </div>
                 </div>
             </article>
