--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <li class="header-nav-item">
             <a href="#">매가소식</a>
             <ul class="header-submenu">
-              <li class="header-submenu-item"><a href="./Notice.html">공지사항</a></li>
+              <li class="header-submenu-item"><a href="./notice/Notice.html">공지사항</a></li>
               <li class="header-submenu-item"><a href="#">매장찾기</a></li>
               <li class="header-submenu-item"><a href="#">매장찾기</a></li>
               <li class="header-submenu-item"><a href="#">매장찾기</a></li>
