--- a/notice/Notice.html
+++ b/notice/Notice.html
@@ -4,12 +4,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mega Notice</title>
-    <link rel="stylesheet" href="./notice/Notice.css">
+    <link rel="stylesheet" href="../head/header_Nav.css">
+    <link rel="stylesheet" href="./Notice.css">
 </head>
+      <header class="header-section">
+    <div class="header-inner">
+      <div class="header-logo">
+        <a href="../index.html">
+            <img src="https://img.79plus.co.kr/megahp/common/img/new_logo_b.png" alt="Mega Coffee Logo">
+        </a>
+      </div>
+      <nav class="header-nav">
+        <ul class="header-nav-list">
+          <li class="header-nav-item">
+            <a href="#">메가 스토리</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">브랜드</a></li>
+              <li class="header-submenu-item"><a href="#">BI</a></li>
+              <li class="header-submenu-item"><a href="#">오시는 길</a></li>
+            </ul>
+          </li>
+          <li class="header-nav-item">
+            <a href="#">메뉴소개</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">음료</a></li>
+              <li class="header-submenu-item"><a href="#">푸드</a></li>
+              <li class="header-submenu-item"><a href="#">상품</a></li>
+            </ul>
+          </li>
+          <li class="header-nav-item">
+            <a href="#">매장</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+            </ul>
+          </li>
+          <li class="header-nav-item">
+            <a href="#">매장</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+            </ul>
+          </li>
+          <li class="header-nav-item">
+            <a href="#">매가소식</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="./Notice/Notice.html">공지</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+            </ul>
+          </li>
+          <li class="header-nav-item">
+            <a href="#">채용</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">채용안내</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+      <div class="header-nav-move-bar-link">
+        <div class="header-nav-move-bar-link-click">
+          <a href="#"><img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_blog.png" alt=""></a>
+
+        </div>
+        <div class="header-nav-move-bar-link-click">
+          <a href="#"><img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_facebook.png" alt=""></a>
+
+        </div>
+        <div class="header-nav-move-bar-link-click">
+          <a href="#"><img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_instagram.png" alt=""></a>
+
+        </div>
+        <div class="header-nav-move-bar-link-click">
+          <a href="#"><img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_smartstore.png" alt=""></a>
+
+        </div>
+      </div>
+    </div>
+  </header>
 <body>
     <div class="title-content-box">
         <div class="content-header"> 
-            <div class="header-inner">
+            <div class="notice-header-inner">
                 <h4>Maga News</h4>
                 <h1>Mega Notice</h1>
                 <div>
